--- a/gatb-core/examples/CMakeLists.txt
+++ b/gatb-core/examples/CMakeLists.txt
@@ -4,16 +4,20 @@
 
 include_directories (${gatb-core-includes})
 
-list (APPEND PROGRAMS iterators1 iterators2 iterators3 iterators4 iterators5)
-list (APPEND PROGRAMS bank1 bank2 bank3 bank4 bank5 bank6 bank7 bank8)
-list (APPEND PROGRAMS kmer1 kmer2 kmer3 kmer4 kmer5 kmer6)
+file (GLOB_RECURSE  PROGRAMS_FILES  *.cpp)
 
-list (APPEND PROGRAMS 
-    debruijn1  debruijn2  debruijn3  debruijn4  debruijn5  debruijn6  debruijn7  debruijn8  debruijn9
-    debruijn10 debruijn11 debruijn12 debruijn13
-)
+FOREACH (program ${PROGRAMS_FILES})
 
-FOREACH (program ${PROGRAMS})
-  add_executable(${program} ${program}.cpp)
-  target_link_libraries(${program} ${gatb-core-libraries})
+    # we get the base name of the current example
+    get_filename_component(basename ${program} NAME_WE)
+   
+    # we add an executable for this example
+    add_executable (${basename} ${program})
+  
+    # we use the gatb core libraries for the link
+    target_link_libraries (${basename} ${gatb-core-libraries})
+
+    list (APPEND PROGRAMS_NAMES ${basename})
+      
 ENDFOREACH (program)
+
