--- a/gatb-core/src/CMakeLists.txt
+++ b/gatb-core/src/CMakeLists.txt
@@ -24,4 +24,4 @@ install (TARGETS gatbcore-static DESTINATION lib)
 #install (TARGETS gatbcore-dynamic DESTINATION lib)
 
 # We install the header files
-install (DIRECTORY ${PROJECT_SOURCE_DIR}/src/ DESTINATION include FILES_MATCHING PATTERN "*.hpp")
+install (DIRECTORY ${PROJECT_SOURCE_DIR}/src/ DESTINATION include FILES_MATCHING PATTERN "*.hpp" PATTERN "*.pri")
