--- a/gatb-core/src/CMakeLists.txt
+++ b/gatb-core/src/CMakeLists.txt
@@ -1,4 +1,20 @@
 ################################################################################
+#  CONFIGURATION FILE
+################################################################################
+configure_file (
+    ${PROJECT_SOURCE_DIR}/src/gatb/system/api/config.hpp.in 
+    ${PROJECT_BINARY_DIR}/include/gatb/system/api/config.hpp
+)
+
+################################################################################
+#  HEADERS COPY
+################################################################################
+file (COPY ${PROJECT_SOURCE_DIR}/src/
+    DESTINATION ${PROJECT_BINARY_DIR}/include
+    FILES_MATCHING PATTERN "*.hpp"  PATTERN "*.pri"
+)
+
+################################################################################
 #  LIBRARY GENERATION 
 ################################################################################
 
