Add compiler information (used for the library generation)

--- a/gatb-core/src/gatb/system/api/config.hpp.in
+++ b/gatb-core/src/gatb/system/api/config.hpp.in
@@ -21,5 +21,6 @@
 #define STR_LIBRARY_VERSION     "${gatb-core-version}"
 #define STR_COMPILATION_DATE    "${gatb-core-date}"
 #define STR_COMPILATION_FLAGS   "${gatb-core-flags}"
+#define STR_COMPILER            "${CMAKE_C_COMPILER}  (${CMAKE_CXX_COMPILER_VERSION})"
 
 #define STR_OPERATING_SYSTEM    "${CMAKE_SYSTEM}"
