--- a/gatb-core/test/unit/CMakeLists.txt
+++ b/gatb-core/test/unit/CMakeLists.txt
@@ -22,8 +22,10 @@ add_custom_target (test gatb-core-cppunit  "All Tests"  ${gatb-core_SOURCE_DIR}/
 #################################################
 #  INSTALL 
 #################################################
-install (TARGETS gatb-core-cppunit   DESTINATION test)
-install (DIRECTORY ${gatb-core_SOURCE_DIR}/test/db DESTINATION test/)
+IF (NOT DEFINED GATB_CORE_INSTALL_EXCLUDE)
+    install (TARGETS gatb-core-cppunit   DESTINATION test)
+    install (DIRECTORY ${gatb-core_SOURCE_DIR}/test/db DESTINATION test/)
+ENDIF ()
     
     
 
