--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -173,43 +173,6 @@ SET (CPACK_SOURCE_IGNORE_FILES
     "^${PROJECT_SOURCE_DIR}/DELIVERY.md"
 )
 
-# We get the 'package' and 'package_source' targets
-include (CPack)
+# We include the module and get all the delivery targets
+include (Delivery)
 
-# We get the user name
-SET (CPACK_USER_NAME  $ENV{USER})
-
-# We set the server URI
-SET (CPACK_SERVER_ADDRESS    "${CPACK_USER_NAME}@scm.gforge.inria.fr")
-SET (CPACK_SERVER_DIR_BIN "/home/groups/gatb-core/versions/bin/")
-SET (CPACK_SERVER_DIR_SRC "/home/groups/gatb-core/versions/src/")
-
-# We define the name of the bin and src targets
-SET (CPACK_URI_BIN "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_SYSTEM_NAME}.tar.gz")
-SET (CPACK_URI_SRC "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-Source.tar.gz")
-
-# We define the location where the bin and src targets have to be uploaded
-SET (CPACK_UPLOAD_URI_BIN "${CPACK_SERVER_ADDRESS}:${CPACK_SERVER_DIR_BIN}")
-SET (CPACK_UPLOAD_URI_SRC "${CPACK_SERVER_ADDRESS}:${CPACK_SERVER_DIR_SRC}")
-
-# We add a custom target for delivery
-add_custom_target (delivery 
-    COMMAND echo "-----------------------------------------------------------"
-    COMMAND echo "DELIVERY FOR ${PROJECT_NAME}, VERSION ${CPACK_PACKAGE_VERSION}"
-    COMMAND echo "-----------------------------------------------------------"
-    COMMAND make -j8 package package_source
-    COMMAND scp ${CPACK_URI_BIN} ${CPACK_UPLOAD_URI_BIN}
-    COMMAND scp ${CPACK_URI_SRC} ${CPACK_UPLOAD_URI_SRC}
-)
-
-# We add a custom target for dumping existing deliveries
-add_custom_target (delivery_dump 
-    COMMAND echo "-----------------------------------------------------------"
-    COMMAND echo "EXISTING BINARIES..."
-    COMMAND ssh  ${CPACK_SERVER_ADDRESS} "ls ${CPACK_SERVER_DIR_BIN}"
-    COMMAND echo ""
-    COMMAND echo "-----------------------------------------------------------"
-    COMMAND echo "EXISTING SOURCES..."
-    COMMAND ssh  ${CPACK_SERVER_ADDRESS} "ls ${CPACK_SERVER_DIR_SRC}"
-    COMMAND echo ""
-)
