force usage of c++0x

--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -66,18 +66,15 @@ endif()
 
 # We determine what kind of c++ standard we should use according to the compiler
 # This should work for gcc and clang
-set (CXX_STD_VERSION "c++11")
+set (CXX_STD_VERSION "c++0x")
 
-# In case we use an "old" version of gcc, we can still do something with the c++0x standard
-if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU"  AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.7")
-    set (CXX_STD_VERSION "c++0x")
+# In case we use an "old" version of clang with boost and c++0x, we have to skip rvalue usage
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+	set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS} -DBOOST_NO_CXX11_RVALUE_REFERENCES=1")
 endif()
 
 # We may use lambda expressions, so we need to use the correct compiler option
-if (WITH_LAMBDA_EXPRESSIONS)
-    message ("-- LAMBDA EXPRESSIONS REQUIRED... we will use option -std=${CXX_STD_VERSION}")
-    set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS}  -std=${CXX_STD_VERSION}")
-endif()
+set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS}  -std=${CXX_STD_VERSION}")
 
 message("-- Options: ${LIBRARY_COMPILE_DEFINITIONS}")
 
